--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "typescript": "^4.1.2"
   },
   "keywords": [
     "gatsby"
