--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "prettier": "2.1.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "faunadb": "^4.0.0"
   },
   "keywords": [
     "gatsby"
